image overflow fix

--- a/style.css
+++ b/style.css
@@ -187,7 +187,6 @@ button {
   
     #gifContainer img {
       max-width: 100%;
-      height: auto;
     }
 
   button {
